...
    <string name="action_context_rename">Rename</string>
    <string name="action_context_shortcut">Add shortcut</string>
    <string name="action_back">Back</string>
    <string name="action_keyboard_ime">Keyboard (IME)</string>
    <string name="action_lock_orientation">Lock screen rotation</string>
    <string name="action_reinstall">Reinstall</string>
    <string name="action_settings">Settings</string>
    <string name="alert_map_menu">Menu key (M) is not assigned.\nThis may prevent access to the runtime MIDlet menu.</string>
    <string name="alert_msg_workdir_not_exists">Working directory not found:\n%1$s\nCreate it or choose another directory?</string>
    <string name="CANCEL_CMD">Cancel</string>
    <string name="change">Change</string>
    <string name="choose">Choose</string>
    <string name="close">Close</string>
...
    <string name="midlet_version"><b>Version: </b></string>
    <string name="more">More</string>
    <string name="msg_error_loading_shader">Unsupported shader. Using the default shader.</string>
    <string name="msg_immediate_mode_disabled">Immediate processing was disabled because event callbacks nested too deeply.</string>
    <string name="msg_mascot_capsule" translatable="false">Mascot Capsule 3D!</string>
    <string name="msg_no_matches">No matches for \"%1$s\"</string>
    <string name="library_destination_apps">Apps</string>
    <string name="library_destination_collections">Collections</string>
    <string name="library_destination_more">More</string>
    <string name="library_search_placeholder">Search apps…</string>
    <string name="library_filter_all">All</string>
    <string name="library_filter_recently_opened">Recently played</string>
    <string name="library_filter_recently_added">Recently added</string>
    <string name="library_filter_favorites">Favorites</string>
    <string name="library_add_to_favorites_action">Add to favorites</string>
    <string name="library_remove_from_favorites_action">Remove from favorites</string>
    <string name="library_favorite_coming_soon">Favorites unavailable</string>
    <string name="library_vendor_version">%1$s · %2$s</string>
    <string name="library_view_list">List</string>
    <string name="library_view_grid">Grid</string>
...
